// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MyCards should render mycards screen 1`] = `
[
  <View
    style={
      {
        "backgroundColor": "#142995",
        "marginTop": 100,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "alignSelf": "stretch",
          "backgroundColor": "white",
          "borderBottomLeftRadius": 40,
          "borderBottomRightRadius": 40,
          "height": 54,
          "justifyContent": "center",
          "paddingLeft": 16,
          "paddingRight": 16,
        }
      }
    >
      <Text
        color="#12C2E9"
        style={
          {
            "color": "#12C2E9",
            "fontFamily": "PTSans-Regular",
            "fontSize": 20,
            "marginBottom": 0,
          }
        }
        text="Meus cartões"
        type="topPage"
      >
        Meus cartões
      </Text>
    </View>
  </View>,
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#142995",
        "flexBasis": 0,
        "flexGrow": 1,
        "flexShrink": 1,
        "justifyContent": "flex-start",
      }
    }
  >
    <View
      onTouchEnd={[Function]}
      style={
        [
          {
            "borderRadius": 16,
            "height": 180,
            "marginTop": 160.08,
            "position": "absolute",
            "width": 690,
            "zIndex": 3,
          },
          {
            "backgroundColor": "black",
            "top": -10,
            "transform": [
              {
                "scale": 1,
              },
              {
                "translateY": 170,
              },
            ],
          },
        ]
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={false}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": ""flex-start"",
            "flexBasis": 0,
            "flexGrow": 1,
            "flexShrink": 1,
            "justifyContent": "center",
            "opacity": 1,
            "paddingBottom": 16,
            "paddingLeft": 16,
            "paddingRight": 16,
            "paddingTop": 16,
          }
        }
      >
        <Text
          style={
            [
              {
                "fontFamily": "PTSans-Regular",
                "fontSize": 16,
                "letterSpacing": 1,
              },
              {
                "color": "white",
                "marginBottom": 32,
              },
            ]
          }
        >
          Black Card
        </Text>
        <Text
          style={
            [
              {
                "fontFamily": "PTSans-Regular",
                "fontSize": 16,
                "letterSpacing": 1,
              },
              {
                "color": "white",
              },
            ]
          }
        >
          Tiago de Jesus Sousa Gama
        </Text>
        <Text
          style={
            [
              {
                "fontFamily": "PTSans-Regular",
                "fontSize": 16,
                "letterSpacing": 1,
              },
              {
                "color": "white",
              },
            ]
          }
        >
          **** **** **** 1234
        </Text>
        <Text
          style={
            [
              {
                "fontFamily": "PTSans-Regular",
                "fontSize": 16,
                "letterSpacing": 1,
              },
              {
                "color": "white",
              },
            ]
          }
        >
          Validade 12/32
        </Text>
      </View>
    </View>
    <View
      onTouchEnd={[Function]}
      style={
        [
          {
            "borderRadius": 16,
            "height": 180,
            "marginTop": 100.08000000000001,
            "position": "absolute",
            "width": 690,
            "zIndex": 2,
          },
          {
            "backgroundColor": "#A5FF32",
            "top": -10,
            "transform": [
              {
                "scale": 1,
              },
              {
                "translateY": 170,
              },
            ],
          },
        ]
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={false}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": ""flex-start"",
            "flexBasis": 0,
            "flexGrow": 1,
            "flexShrink": 1,
            "justifyContent": "center",
            "opacity": 1,
            "paddingBottom": 16,
            "paddingLeft": 16,
            "paddingRight": 16,
            "paddingTop": 16,
          }
        }
      >
        <Text
          style={
            [
              {
                "fontFamily": "PTSans-Regular",
                "fontSize": 16,
                "letterSpacing": 1,
              },
              {
                "color": "black",
                "marginBottom": 32,
              },
            ]
          }
        >
          Green Card
        </Text>
        <Text
          style={
            [
              {
                "fontFamily": "PTSans-Regular",
                "fontSize": 16,
                "letterSpacing": 1,
              },
              {
                "color": "black",
              },
            ]
          }
        >
          Asdf sdf asfasf  
        </Text>
        <Text
          style={
            [
              {
                "fontFamily": "PTSans-Regular",
                "fontSize": 16,
                "letterSpacing": 1,
              },
              {
                "color": "black",
              },
            ]
          }
        >
          **** **** **** 1234
        </Text>
        <Text
          style={
            [
              {
                "fontFamily": "PTSans-Regular",
                "fontSize": 16,
                "letterSpacing": 1,
              },
              {
                "color": "black",
              },
            ]
          }
        >
          Validade 12/31
        </Text>
      </View>
    </View>
    <View
      onTouchEnd={[Function]}
      style={
        [
          {
            "borderRadius": 16,
            "height": 180,
            "marginTop": 40.08000000000001,
            "position": "absolute",
            "width": 690,
            "zIndex": 1,
          },
          {
            "backgroundColor": "black",
            "top": -10,
            "transform": [
              {
                "scale": 1,
              },
              {
                "translateY": 170,
              },
            ],
          },
        ]
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={false}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": ""flex-start"",
            "flexBasis": 0,
            "flexGrow": 1,
            "flexShrink": 1,
            "justifyContent": "center",
            "opacity": 1,
            "paddingBottom": 16,
            "paddingLeft": 16,
            "paddingRight": 16,
            "paddingTop": 16,
          }
        }
      >
        <Text
          style={
            [
              {
                "fontFamily": "PTSans-Regular",
                "fontSize": 16,
                "letterSpacing": 1,
              },
              {
                "color": "white",
                "marginBottom": 32,
              },
            ]
          }
        >
          Black Card
        </Text>
        <Text
          style={
            [
              {
                "fontFamily": "PTSans-Regular",
                "fontSize": 16,
                "letterSpacing": 1,
              },
              {
                "color": "white",
              },
            ]
          }
        >
          Asdf asdf 1
        </Text>
        <Text
          style={
            [
              {
                "fontFamily": "PTSans-Regular",
                "fontSize": 16,
                "letterSpacing": 1,
              },
              {
                "color": "white",
              },
            ]
          }
        >
          **** **** **** 4234
        </Text>
        <Text
          style={
            [
              {
                "fontFamily": "PTSans-Regular",
                "fontSize": 16,
                "letterSpacing": 1,
              },
              {
                "color": "white",
              },
            ]
          }
        >
          Validade 23/12
        </Text>
      </View>
    </View>
    <View
      alignItems="center"
      backgroundColor="primary"
      marginTop={933.8}
      paddingLeft={32}
      paddingRight={32}
      style={
        {
          "alignItems": "center",
          "alignSelf": "stretch",
          "backgroundColor": "#142995",
          "flexDirection": "column",
          "justifyContent": "flex-start",
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 933.8,
          "paddingBottom": 0,
          "paddingLeft": 32,
          "paddingRight": 32,
          "paddingTop": 0,
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "alignSelf": "stretch",
            "backgroundColor": "#12C2E9",
            "borderBottomLeftRadius": 12,
            "borderBottomRightRadius": 12,
            "borderTopLeftRadius": 12,
            "borderTopRightRadius": 12,
            "height": 54,
            "justifyContent": "center",
            "opacity": 1,
          }
        }
        testID="select-card-testid"
      >
        <Text
          activeOpacity={0.7}
          backgroundColor="secondary"
          color="white"
          fullWidth={true}
          onPress={[Function]}
          style={
            {
              "backgroundColor": "#12C2E9",
              "color": "white",
              "fontFamily": "PTSans-Regular",
              "fontSize": 18,
              "fontWeight": "100",
            }
          }
          suppressHighlighting={true}
          testIDButton="select-card-testid"
          textButton="pagar com esse cartão"
        >
          pagar com esse cartão
        </Text>
      </View>
    </View>
  </View>,
]
`;

exports[`MyCards should render mycards screen 2`] = `
[
  <View
    style={
      {
        "backgroundColor": "#142995",
        "marginTop": 100,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "alignSelf": "stretch",
          "backgroundColor": "white",
          "borderBottomLeftRadius": 40,
          "borderBottomRightRadius": 40,
          "height": 54,
          "justifyContent": "center",
          "paddingLeft": 16,
          "paddingRight": 16,
        }
      }
    >
      <Text
        color="#12C2E9"
        style={
          {
            "color": "#12C2E9",
            "fontFamily": "PTSans-Regular",
            "fontSize": 20,
            "marginBottom": 0,
          }
        }
        text="Meus cartões"
        type="topPage"
      >
        Meus cartões
      </Text>
    </View>
  </View>,
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#142995",
        "flexBasis": 0,
        "flexGrow": 1,
        "flexShrink": 1,
        "justifyContent": "flex-start",
      }
    }
  >
    <View
      alignItems="center"
      backgroundColor="primary"
      marginTop={466.9}
      paddingLeft={32}
      paddingRight={32}
      style={
        {
          "alignItems": "center",
          "alignSelf": "stretch",
          "backgroundColor": "#142995",
          "flexDirection": "column",
          "justifyContent": "flex-start",
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 466.9,
          "paddingBottom": 0,
          "paddingLeft": 32,
          "paddingRight": 32,
          "paddingTop": 0,
        }
      }
    >
      <Text
        style={
          {
            "color": "white",
            "fontSize": 16,
            "marginBottom": 32,
          }
        }
      >
        Você ainda não adicionou cartão.
      </Text>
    </View>
    <View
      alignItems="center"
      backgroundColor="primary"
      marginTop={400.2}
      paddingLeft={32}
      paddingRight={32}
      style={
        {
          "alignItems": "center",
          "alignSelf": "stretch",
          "backgroundColor": "#142995",
          "flexDirection": "column",
          "justifyContent": "flex-start",
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 400.2,
          "paddingBottom": 0,
          "paddingLeft": 32,
          "paddingRight": 32,
          "paddingTop": 0,
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "alignSelf": "stretch",
            "backgroundColor": "white",
            "borderBottomLeftRadius": 12,
            "borderBottomRightRadius": 12,
            "borderTopLeftRadius": 12,
            "borderTopRightRadius": 12,
            "height": 54,
            "justifyContent": "center",
            "opacity": 1,
          }
        }
        testID="add-fist-card-testid"
      >
        <Text
          activeOpacity={0.7}
          backgroundColor="white"
          color="primary"
          fullWidth={true}
          onPress={[Function]}
          style={
            {
              "backgroundColor": "white",
              "color": "#142995",
              "fontFamily": "PTSans-Regular",
              "fontSize": 18,
              "fontWeight": "100",
            }
          }
          suppressHighlighting={true}
          testIDButton="add-fist-card-testid"
          textButton="Adicionar cartão"
        >
          Adicionar cartão
        </Text>
      </View>
    </View>
  </View>,
]
`;
